Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86844

qdoc fails to include and quote from other files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.1.0 RC
    • 6.0.0 Alpha
    • Build tools: qdoc
    • None
    • 8
    • da5b8d012259375543b967e5e12aa6066595ac22 (qt/qttools/dev)
    • Da Vinci sprint 20

      Building qdoc from qttools:5b11b631914ff399d72f0a9b58a7b06e96fc7a6a and qtbase:1e2325f0dc39df3c91b7d74c7837961a0e12884e, and running it on qtbase generates errors such as:

      In file included from /Users/vohi/qt/dev/qtbase/src/corelib/text/qbytearray.cpp:953:
      /Users/vohi/qt/dev/qtbase/src/corelib/doc: (qdoc) warning: Cannot find 'iterator-invalidation-func-desc' in ''
      

      That location in qbytearray.cpp has the following documentation:

      /*! \fn QByteArray::const_iterator QByteArray::cbegin() const
          \since 5.0
      
          Returns a const \l{STL-style iterators}{STL-style iterator} pointing to the
          first byte in the byte-array.
      
          \include qbytearray.cpp iterator-invalidation-func-desc
      
          \sa begin(), cend()
      */
      

      and the block that is attempted to be quoted is just a few lines up at 933:

      //! [iterator-invalidation-func-desc]
          \warning The returned iterator is invalidated on detachment or when the
          QByteArray is modified.
      //! [iterator-invalidation-func-desc]
      

      The resulting HTML for QByteArray::cbegin doesn't contain that warning.

      This issue manifests itself in several places, resulting in additional warnings about undocumented APIs and enum values.

        For Gerrit Dashboard: QTBUG-86844
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            vhilshei Volker Hilsheimer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes