qdoc: Fix issues in \include command

- 'sources' configuration variable was not considered when searching
  for file to include.
- An empty QString was pushed to the location stack in
  DocParser::include(), resulting in vague warning messages
- The search algorithm chose the first path that ended in the
  filename to find, with the potential of incorrectly choosing
  'foobar.cpp' over 'bar.cpp'.

Fixes: QTBUG-86844
Change-Id: If180ffe0817b2e786356b49f7e679e158fbc407d
Reviewed-by: Paul Wicking <paul.wicking@qt.io>